--- a/public/chat.html
+++ b/public/chat.html
@@ -2,15 +2,68 @@
 <html lang="cs">
   <head>
     <title>chatApp</title>
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/png" href="img/favicon.ico">
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <!-- Font Awesome link -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- CSS -->
+    <link rel="stylesheet" href="CSS/style.css">
   </head>
   <body>
-      
+    <div class="chat-container">
+      <header class="chat-header">
+        <h1>chatApp</h1>
+        <a href="index.html" class="btn">Leave Room</a>
+      </header>
+      <main class="chat-main">
+        <div class="chat-sidebar">
+          <h3><i class="fa fa-comments"></i> Room Name:</h3>
+          <h2 id="room-name">Alpha</h2>
+          <h3><i class="fa fa-users"></i> Users</h3>
+          <ul id="users">
+            <li>Brad</li>
+            <li>John</li>
+            <li>Mary</li>
+            <li>Paul</li>
+            <li>Mike</li>
+          </ul>
+        </div>
+        <div class="chat-messages">
+            <div class="message">
+              <p class="meta">Brad <span>9:12pm</span></p>
+              <p class="text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
+                repudiandae.
+              </p>
+            </div>
+            <div class="message">
+              <p class="meta">Mary <span>9:15pm</span></p>
+              <p class="text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
+                repudiandae.
+              </p>
+            </div>
+        </div>
+      </main>
+      <div class="chat-form-container">
+        <form id="chat-form">
+          <input
+            id="msg"
+            type="text"
+            placeholder="Enter Message"
+            required
+            autocomplete="off"
+          />
+          <button class="btn"><i class="fa fa-paper-plane"></i> Send</button>
+        </form>
+      </div>
+    </div>
+  
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
