--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="cs">
   <head>
     <title>chatApp</title>
+    <!-- Favicon -->
     <link rel="shortcut icon" type="image/png" href="img/favicon.ico">
     <!-- Required meta tags -->
     <meta charset="utf-8">
