--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,8 @@
           <img src="img/chatApp-logo2.png" alt="logo" class="logo">
         <form action="chat.html">
           <div class="txt_field">
-            <label for="name">Jméno</label>
-            <input type="text" required/>
+            <label for="username">Jméno</label>
+            <input type="text" name="username" id="username" required/>
             <label for="room">Room</label>
             <select name="room" id="room">
               <option value="Alpha">Alpha</option>
