--- a/public/chat.html
+++ b/public/chat.html
@@ -18,34 +18,23 @@
     <div class="chat-container">
       <header class="chat-header">
         <h1>chatApp</h1>
-        <a href="index.html" class="btn">Leave Room</a>
+        <a href="index.html" class="btn">Opustit místnost</a>
       </header>
       <main class="chat-main">
         <div class="chat-sidebar">
-          <h3><i class="fa fa-comments"></i> Room Name:</h3>
-          <h2 id="room-name">Alpha</h2>
-          <h3><i class="fa fa-users"></i> Users</h3>
-          <ul id="users">
-            <li>Brad</li>
-            <li>John</li>
-            <li>Mary</li>
-            <li>Paul</li>
-            <li>Mike</li>
-          </ul>
+          <h3><i class="fa fa-comments"></i> Místnost:</h3>
+          <h2 id="room-name"></h2>
+          <h3><i class="fa fa-users"></i> Uživatele</h3>
+          <ul id="users"></ul>
         </div>
         <div class="chat-messages">
         </div>
       </main>
       <div class="chat-form-container">
         <form id="chat-form">
-          <input
-            id="msg"
-            type="text"
-            placeholder="Enter Message"
-            required
-            autocomplete="off"
+          <input id="msg" type="text" placeholder="Zadej zprávu" required autocomplete="off"
           />
-          <button class="btn"><i class="fa fa-paper-plane"></i> Send</button>
+          <button class="btn"><i class="fa fa-paper-plane"></i> Odeslat</button>
         </form>
       </div>
     </div>
@@ -58,5 +47,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.9.6/qs.min.js" integrity="sha512-3TmPrquYLaAsUmZKXRARTDC5siWhLAdBVqNo4dWpDABBtLU62AaoTaQJEvjxjExcZYurO6i1dnK85k8pPIBlRg==" crossorigin="anonymous"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/main.js"></script>
+    
   </body>
 </html>
